--- a/Blog Theme/index.html
+++ b/Blog Theme/index.html
@@ -21,11 +21,11 @@
             <a class="nav-link" title="rss feed" href="https://www.tumblr.com/brownsugarwithhoney/rss"><i class="fa fa-rss"></i></a>
             <a class="nav-link" href="https://www.tumblr.com/follow/brownsugarwithhoney" title="follow"><i class="fa fa-user-plus"></i></a>
         </nav>
-        <section class="home-page">
+        <section id="home">
+            <div class="blog-name">
+                <h1>brown sugar with honey</h1>
+            </div>
             <div class="left-pane">
-                <div class="blog-title">
-                    <h1>brown sugar with honey</h1>
-                </div>
                 <div class="introduction">
                     <p></p>
                 </div>
@@ -47,7 +47,6 @@
                 <div class="tag"></div>
                 </div>
             </div>
-            
         </section>
     </div>
 </body>
